# Krympa

./: .gitignore  LICENSE.md  README.md
lean/: Proof.lean  lakefile.toml
ocaml/: dune-project
ocaml/_build/: .db  .digest-db  log
ocaml/_build/default/: META.ocaml  ocaml.dune-package
ocaml/_build/default/.dune/: configurator  configurator.v2
ocaml/_build/default/lib/: lemma_extractor.ml  ocaml.ml-gen  tptp_parser.ml
ocaml/_build/default/lib/.merlin-conf/: lib-ocaml
ocaml/_build/default/lib/.ocaml.objs/: ocaml__Lemma_extractor.impl.d  ocaml__Tptp_parser.impl.d
ocaml/_build/default/test/.merlin-conf/: exe-test_ocaml
ocaml/_build/install/default/lib/ocaml/: lemma_extractor.ml  ocaml.ml  tptp_parser.ml
ocaml/lib/: dune
python/: generate_input.py  summarize.py  tolean.py
rust/: Cargo.toml  build.rs
rust/egg-sc-tptp/: Cargo.toml  README.md
rust/egg-sc-tptp/src/: fol.rs  lib.rs  main.rs  printer.rs  translator.rs
rust/ocaml_install/: tptp_parser
rust/rust/ocaml_install/: tptp_parser
rust/src/: alpha_match.rs  dag.rs  frankenstein.rs  lib.rs  main.rs  minimize.rs  proof_turnaround.rs  prover_wrapper.rs  run_vamp.rs  superpose.rs  utils.rs
shell/: run  run_one
