[package]
name = "krympa"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wait-timeout = "0.2"
egg-sc-tptp = { path = "egg-sc-tptp" }
regex = "1.10"
egg = "0.7"
itertools = "0.10"

[workspace]
members = ["egg-sc-tptp"]
